<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/moodIntroTextView"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_are_you_feeling_today"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122" />

    <Button
        android:id="@+id/happyBtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="92dp"
        android:backgroundTint="#E4D020"
        android:text="@string/happy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sadBtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="#3195CC"
        android:text="@string/sad"
        app:layout_constraintBottom_toBottomOf="@+id/happyBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/happyBtn"
        app:layout_constraintTop_toTopOf="@+id/happyBtn" />

    <Button
        android:id="@+id/contentBtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/happyBtn" />

    <Button
        android:id="@+id/fearBtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="#4C0DBC"
        android:text="@string/fearful"
        app:layout_constraintBottom_toBottomOf="@+id/contentBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/contentBtn"
        app:layout_constraintTop_toBottomOf="@+id/happyBtn" />

    <Button
        android:id="@+id/angerBtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:backgroundTint="#982A2A"
        android:text="@string/angry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentBtn" />

    <Button
        android:id="@+id/lazyBtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="#B262B5"
        android:text="@string/lazy"
        app:layout_constraintBottom_toBottomOf="@+id/angerBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/angerBtn"
        app:layout_constraintTop_toBottomOf="@+id/contentBtn" />

    <Button
        android:id="@+id/motivatedBtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:backgroundTint="#D5973C"
        android:text="@string/motivated"
        app:layout_constraintEnd_toEndOf="@+id/angerBtn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/angerBtn"
        app:layout_constraintTop_toBottomOf="@+id/angerBtn" />

    <TextView
        android:id="@+id/selectedMoodTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/motivatedBtn"
        tools:text="Current Mood: Indescribable" />
</androidx.constraintlayout.widget.ConstraintLayout>