<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newEntryScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/moodIntroTextView"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="48dp"
        android:text="@string/how_are_you_feeling_today"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
                android:id="@+id/happyBtn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="92dp"
                android:backgroundTint="#E4D020"
                android:text="@string/happy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/sadBtn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:backgroundTint="#3195CC"
                android:text="@string/sad"
                app:layout_constraintBottom_toBottomOf="@+id/happyBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/happyBtn"
                app:layout_constraintTop_toTopOf="@+id/happyBtn" />

            <Button
                android:id="@+id/contentBtn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:backgroundTint="#4CAF50"
                android:text="@string/content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/happyBtn" />

            <Button
                android:id="@+id/fearBtn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:backgroundTint="#4C0DBC"
                android:text="@string/fearful"
                app:layout_constraintBottom_toBottomOf="@+id/contentBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/contentBtn"
                app:layout_constraintTop_toBottomOf="@+id/happyBtn" />

            <Button
                android:id="@+id/angerBtn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:backgroundTint="#982A2A"
                android:text="@string/angry"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contentBtn" />

            <Button
                android:id="@+id/lazyBtn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:backgroundTint="#B262B5"
                android:text="@string/lazy"
                app:layout_constraintBottom_toBottomOf="@+id/angerBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/angerBtn"
                app:layout_constraintTop_toBottomOf="@+id/contentBtn" />

            <Button
                android:id="@+id/motivatedBtn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:backgroundTint="#D5973C"
                android:text="@string/motivated"
                app:layout_constraintEnd_toEndOf="@+id/angerBtn"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/angerBtn"
                app:layout_constraintTop_toBottomOf="@+id/angerBtn" />

    <TextView
        android:id="@+id/selectedMoodTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/motivatedBtn"
        tools:text="Current Mood: Indescribable" />

    <com.google.android.material.slider.Slider
        android:id="@+id/waterSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:value="0"
        android:valueFrom="0"
        android:valueTo="16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waterIntroTextView" />

    <TextView
        android:id="@+id/waterIntroTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:text="Water Intake Today"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedMoodTextView" />

    <TextView
        android:id="@+id/caloriesIntroTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:text="Enter Calories"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleepSlider" />

    <EditText
        android:id="@+id/caloriesEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="150dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caloriesIntroTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sleepTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Log Sleep Hours"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waterSlider" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sleepSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:value="0"
        android:valueFrom="0.0"
        android:valueTo="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleepTextView" />

    <Button
        android:id="@+id/caloriesSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="@+id/caloriesEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/caloriesEditText"
        app:layout_constraintTop_toTopOf="@+id/caloriesEditText"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/caloriesSavedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/caloriesEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/caloriesEditText"
        app:layout_constraintTop_toBottomOf="@+id/caloriesEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>